Adding First question solution to code block

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -4,9 +4,11 @@
 [General]
 # nothing here
 
+[Config QuestionA]
+network = QuestionA
+
 [Config QuestionB]
 network = Tictoc1
-
 
 # Controller
 Tictoc1.controller.config = xmldoc("controller_cfg.xml","//controller-profile[@id='uniform']")
