Adding Second part of question 1

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -4,8 +4,12 @@
 [General]
 # nothing here
 
-[Config QuestionA]
-network = QuestionA
+[Config QuestionA1]
+network = QuestionA1
+
+[Config QuestionA2]
+network = QuestionA2
+QuestionA2.tic[*].delayTime = exponential(3s) # Exercise 13 (Question 4)
 
 [Config QuestionB]
 network = Tictoc1
