Getting random requesting working w/new CDN object

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -16,8 +16,8 @@ network = Tictoc1
 
 # Controller
 Tictoc1.controller.config = xmldoc("controller_cfg.xml","//controller-profile[@id='uniform']")
-Tictoc1.controller.events = ""
-Tictoc1.controller.eventsSection = ""
+Tictoc1.controller.events = "events.cfg"
+Tictoc1.controller.eventsSection = "default"
 
 # udp app (off)
 **.numUdpApps = 0
@@ -32,7 +32,7 @@ Tictoc1.origin.tcpApp[0].activationTime = 0.0
 
 # CDNs
 Tictoc1.server*.numTcpApps = 1
-Tictoc1.server*.tcpApp[0].typename = "HttpServer"
+Tictoc1.server*.tcpApp[0].typename = "CDNServerBase"
 Tictoc1.server1.tcpApp[0].hostName = "cdn1.example.org"
 Tictoc1.server2.tcpApp[0].hostName = "cdn2.example.org"
 Tictoc1.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
@@ -45,4 +45,4 @@ Tictoc1.client[*].tcpApp[0].typename = "HttpBrowser"
 Tictoc1.client[*].tcpApp[0].logFile = ""
 Tictoc1.client[*].tcpApp[0].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
 Tictoc1.client[*].tcpApp[0].activationTime = 0.0
-Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
+#Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
