--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -32,7 +32,7 @@ Tictoc1.origin.tcpApp[0].activationTime = 0.0
 
 # CDNs
 Tictoc1.server*.numTcpApps = 1
-Tictoc1.server*.tcpApp[0].typename = "CDNServerBase"
+Tictoc1.server*.tcpApp[0].typename = "CDNServer"
 Tictoc1.server1.tcpApp[0].hostName = "cdn1.example.org"
 Tictoc1.server2.tcpApp[0].hostName = "cdn2.example.org"
 Tictoc1.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
