--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -31,13 +31,18 @@ Tictoc1.origin.tcpApp[0].port = 80
 Tictoc1.origin.tcpApp[0].activationTime = 0.0
 
 # CDNs
-Tictoc1.server*.numTcpApps = 1
+Tictoc1.server*.numTcpApps = 2
 Tictoc1.server*.tcpApp[0].typename = "CDNServer"
 Tictoc1.server1.tcpApp[0].hostName = "cdn1.example.org"
 Tictoc1.server2.tcpApp[0].hostName = "cdn2.example.org"
 Tictoc1.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
 Tictoc1.server*.tcpApp[0].port = 80
 Tictoc1.server*.tcpApp[0].activationTime = 0.0
+
+Tictoc1.server*.tcpApp[1].typename = "CDNBrowser"
+Tictoc1.server*.tcpApp[1].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
+Tictoc1.server*.tcpApp[1].activationTime = 0.0
+
 
 # Clients
 Tictoc1.client[*].numTcpApps = 1
