Some final cleanup before calling it a night

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -47,7 +47,7 @@ Tictoc1.server*.tcpApp[1].activationTime = 0.0
 # Clients
 Tictoc1.client[*].numTcpApps = 1
 Tictoc1.client[*].tcpApp[0].typename = "HttpBrowser"
-Tictoc1.client[*].tcpApp[0].logFile = ""
+Tictoc1.client[*].tcpApp[0].logFile = "results/clients.log"
 Tictoc1.client[*].tcpApp[0].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
 Tictoc1.client[*].tcpApp[0].activationTime = 0.0
 #Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
