Renaming files as necessary

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -12,42 +12,42 @@ network = QuestionA2
 QuestionA2.tic[*].delayTime = exponential(3s) # Exercise 13 (Question 4)
 
 [Config QuestionB]
-network = Tictoc1
+network = QuestionB
 
 # Controller
-Tictoc1.controller.config = xmldoc("controller_cfg.xml","//controller-profile[@id='uniform']")
-Tictoc1.controller.events = "events.cfg"
-Tictoc1.controller.eventsSection = "default"
+*.controller.config = xmldoc("controller_cfg.xml","//controller-profile[@id='uniform']")
+*.controller.events = "events.cfg"
+*.controller.eventsSection = "default"
 
 # udp app (off)
 **.numUdpApps = 0
 
 # Origin
-Tictoc1.origin.numTcpApps = 1
-Tictoc1.origin.tcpApp[0].typename = "HttpServer"
-Tictoc1.origin.tcpApp[0].hostName = "origin.example.org"
-Tictoc1.origin.tcpApp[0].config = xmldoc("origin_cfg.xml","//server-profile[@id='normal']")
-Tictoc1.origin.tcpApp[0].port = 80
-Tictoc1.origin.tcpApp[0].activationTime = 0.0
+*.origin.numTcpApps = 1
+*.origin.tcpApp[0].typename = "HttpServer"
+*.origin.tcpApp[0].hostName = "origin.example.org"
+*.origin.tcpApp[0].config = xmldoc("origin_cfg.xml","//server-profile[@id='normal']")
+*.origin.tcpApp[0].port = 80
+*.origin.tcpApp[0].activationTime = 0.0
 
 # CDNs
-Tictoc1.server*.numTcpApps = 2
-Tictoc1.server*.tcpApp[0].typename = "CDNServer"
-Tictoc1.server1.tcpApp[0].hostName = "cdn1.example.org"
-Tictoc1.server2.tcpApp[0].hostName = "cdn2.example.org"
-Tictoc1.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
-Tictoc1.server*.tcpApp[0].port = 80
-Tictoc1.server*.tcpApp[0].activationTime = 0.0
+*.server*.numTcpApps = 2
+*.server*.tcpApp[0].typename = "CDNServer"
+*.server1.tcpApp[0].hostName = "cdn1.example.org"
+*.server2.tcpApp[0].hostName = "cdn2.example.org"
+*.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
+*.server*.tcpApp[0].port = 80
+*.server*.tcpApp[0].activationTime = 0.0
 
-Tictoc1.server*.tcpApp[1].typename = "CDNBrowser"
-Tictoc1.server*.tcpApp[1].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
-Tictoc1.server*.tcpApp[1].activationTime = 0.0
+*.server*.tcpApp[1].typename = "CDNBrowser"
+*.server*.tcpApp[1].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
+*.server*.tcpApp[1].activationTime = 0.0
 
 
 # Clients
-Tictoc1.client[*].numTcpApps = 1
-Tictoc1.client[*].tcpApp[0].typename = "HttpBrowser"
-Tictoc1.client[*].tcpApp[0].logFile = "results/clients.log"
-Tictoc1.client[*].tcpApp[0].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
-Tictoc1.client[*].tcpApp[0].activationTime = 0.0
+*.client[*].numTcpApps = 1
+*.client[*].tcpApp[0].typename = "HttpBrowser"
+*.client[*].tcpApp[0].logFile = "results/clients.log"
+*.client[*].tcpApp[0].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
+*.client[*].tcpApp[0].activationTime = 0.0
 #Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
