--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -15,7 +15,7 @@ QuestionA2.tic[*].delayTime = exponential(3s) # Exercise 13 (Question 4)
 network = QuestionB
 
 # Controller
-*.controller.config = xmldoc("controller_cfg.xml","//controller-profile[@id='uniform']")
+*.controller.config = xmldoc("QuestionB.xml","//controller-profile[@id='uniform']")
 *.controller.events = "events.cfg"
 *.controller.eventsSection = "default"
 
@@ -26,7 +26,7 @@ network = QuestionB
 *.origin.numTcpApps = 1
 *.origin.tcpApp[0].typename = "HttpServer"
 *.origin.tcpApp[0].hostName = "origin.example.org"
-*.origin.tcpApp[0].config = xmldoc("origin_cfg.xml","//server-profile[@id='normal']")
+*.origin.tcpApp[0].config = xmldoc("QuestionB.xml","//server-profile[@id='normal']")
 *.origin.tcpApp[0].port = 80
 *.origin.tcpApp[0].activationTime = 0.0
 
@@ -35,12 +35,12 @@ network = QuestionB
 *.server*.tcpApp[0].typename = "CDNServer"
 *.server1.tcpApp[0].hostName = "cdn1.example.org"
 *.server2.tcpApp[0].hostName = "cdn2.example.org"
-*.server*.tcpApp[0].config = xmldoc("cdn_cfg.xml","//server-profile[@id='normal']")
+*.server*.tcpApp[0].config = xmldoc("QuestionB.xml","//server-profile[@id='normal']")
 *.server*.tcpApp[0].port = 80
 *.server*.tcpApp[0].activationTime = 0.0
 
 *.server*.tcpApp[1].typename = "CDNBrowser"
-*.server*.tcpApp[1].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
+*.server*.tcpApp[1].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.server*.tcpApp[1].activationTime = 0.0
 
 
@@ -48,6 +48,6 @@ network = QuestionB
 *.client[*].numTcpApps = 1
 *.client[*].tcpApp[0].typename = "HttpBrowser"
 *.client[*].tcpApp[0].logFile = "results/clients.log"
-*.client[*].tcpApp[0].config = xmldoc("client_cfg.xml","//user-profile[@id='normal']")
+*.client[*].tcpApp[0].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.client[*].tcpApp[0].activationTime = 0.0
 #Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
