Cleaning remaining configuration files

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,3 @@
-# This file is shared by all tictoc simulations.
-# Lines beginning with `#' are comments
-
 [General]
 # nothing here
 
@@ -16,7 +13,7 @@ network = QuestionB
 
 # Controller
 *.controller.config = xmldoc("QuestionB.xml","//controller-profile[@id='uniform']")
-*.controller.events = "events.cfg"
+*.controller.events = "QuestionB.cfg"
 *.controller.eventsSection = "default"
 
 # udp app (off)
@@ -30,7 +27,7 @@ network = QuestionB
 *.origin.tcpApp[0].port = 80
 *.origin.tcpApp[0].activationTime = 0.0
 
-# CDNs
+# CDNServer
 *.server*.numTcpApps = 2
 *.server*.tcpApp[0].typename = "CDNServer"
 *.server1.tcpApp[0].hostName = "cdn1.example.org"
@@ -39,6 +36,7 @@ network = QuestionB
 *.server*.tcpApp[0].port = 80
 *.server*.tcpApp[0].activationTime = 0.0
 
+# CDNBrowser
 *.server*.tcpApp[1].typename = "CDNBrowser"
 *.server*.tcpApp[1].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.server*.tcpApp[1].activationTime = 0.0
@@ -50,4 +48,3 @@ network = QuestionB
 *.client[*].tcpApp[0].logFile = "results/clients.log"
 *.client[*].tcpApp[0].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.client[*].tcpApp[0].activationTime = 0.0
-#Tictoc1.client[*].tcpApp[0].scriptFile = "browse.script"
