Preparing for statistics browser

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -44,7 +44,7 @@ network = QuestionB
 
 # Clients
 *.client[*].numTcpApps = 1
-*.client[*].tcpApp[0].typename = "HttpBrowser"
+*.client[*].tcpApp[0].typename = "StatsBrowser"
 *.client[*].tcpApp[0].logFile = "results/clients.log"
 *.client[*].tcpApp[0].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.client[*].tcpApp[0].activationTime = 0.0
