Making sure CDNBrowsers dont request things too

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -40,6 +40,7 @@ network = QuestionB
 *.server*.tcpApp[1].typename = "CDNBrowser"
 *.server*.tcpApp[1].config = xmldoc("QuestionB.xml","//user-profile[@id='normal']")
 *.server*.tcpApp[1].activationTime = 0.0
+*.server*.tcpApp[1].scriptFile = "QuestionB.script"
 
 
 # Clients
